--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,5 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}. Your ip: #{ip}, dd: #{dd}
+  a(href="/login") Login
+  a(href="/signup") Sign up
