--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,1 +1,1 @@
-body{padding:50px;font:14px "Lucida Grande",Helvetica,Arial,sans-serif}a{color:#00B7FF}
+body{padding:70px 50px 50px 50px;font:14px "Lucida Grande",Helvetica,Arial,sans-serif}a{color:#00B7FF}.navbar-wrapper .navbar{border-radius:4px}
