--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,8 +1,12 @@
 body {
-  padding: 50px;
+  padding: 70px 50px 50px 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+.navbar-wrapper .navbar {
+  border-radius: 4px;
 }
