--- a/public/views/login.jade
+++ b/public/views/login.jade
@@ -5,7 +5,8 @@ extends layout
 
 block content
   .container
-    .col-sm-6.col-sm-offset-3
+    .col-sm-4.col-sm-offset-4
+      h1 Login
       if message.length > 0
         .alert.alert-danger
           p= message
@@ -16,4 +17,5 @@ block content
         .form-group
           label Password
           input(type="password", class="form-control", name="password")
+        br
         button(type="submit", class="btn btn-warning btn-lg") Login!
