--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -7,6 +7,9 @@ a {
   color: #00B7FF;
 }
 
-.navbar-wrapper .navbar {
-  border-radius: 4px;
+.navbar-green {
+  background-color: #0A4000;
+  a {
+    color: #1400dc
+  }
 }
