--- a/public/views/profileNavbar.jade
+++ b/public/views/profileNavbar.jade
@@ -1,6 +1,5 @@
 //
    Created by Marcin on 2014-08-21.
-
 block navbar
   nav.navbar.navbar-inverse.navbar-fixed-top
     .container
@@ -10,11 +9,13 @@ block navbar
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        a.navbar-brand(href='/')
+        a.navbar-brand(href='/profile')
           span.glyphicon.glyphicon-stats
+          |  dsaddsa
       .collapse.navbar-collapse
         ul.nav.navbar-nav.navbar-right
           li
-            a(href='/login') Login
+            a(href='/logout') Logout
+        ul.nav.navbar-nav
           li
-            a(href='/signup') Sign up
+            a(href='#') My surveys
