--- a/public/views/error.jade
+++ b/public/views/error.jade
@@ -1,8 +1,9 @@
 extends layout
 
 block content
-  center
-    img(src='/images/404.jpg')
+  if error.status == 404
+    center
+      img(src='/images/404.jpg')
   h1= message
   h2= error.status
   pre #{error.stack}
