--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,15 +1,41 @@
 body {
   padding: 70px 50px 50px 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  //background-image: url('../images/background.jpg');
+  background-color: #f5f5f5;
 }
 
-a {
-  color: #00B7FF;
-}
+//a {
+//  color: #00B7FF;
+//}
 
 .navbar-green {
   background-color: #0A4000;
   a {
     color: #1400dc
+  }
+}
+
+.my-panel {
+  padding: 30px;
+  background-color: #fff;
+  border-radius: 2px;
+  box-shadow: 1px 1px 10px #888888;
+  margin-top: 20px;
+
+  .my-panel-header {
+    h3 {
+      margin: 0px;
+    }
+    margin: 10px 0px 20px 0px;
+  }
+
+  table {
+    .fixed {
+      table-layout: fixed;
+      td {
+        overflow: hidden;
+      }
+    }
   }
 }
