--- a/public/views/login.jade
+++ b/public/views/login.jade
@@ -1,16 +1,33 @@
 //
    Created by Marcin on 2014-08-20.
 
-extends indexLayout
+extends layout
 
 block content
+  nav.navbar.navbar-inverse.navbar-fixed-top
+    .container
+      .navbar-header
+        button.navbar-toggle(type='button', data-toggle='collapse', data-target='.collapse.navbar-collapse')
+          span.sr-only Toggle navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+        a.navbar-brand(href='/') Surveys
+      .collapse.navbar-collapse
+        ul.nav.navbar-nav.navbar-right
+          li
+            a(href='/login') Login
+          li
+            a(href='/signup') Sign up
+
   .container
     .col-sm-4.col-sm-offset-4
-      .well.well-lg
-        h1 Login
-        if message.length > 0
-          .alert.alert-danger
-            p= message
+      .my-panel
+        .my-panel-header
+          h1 Login
+          if message.length > 0
+            .alert.alert-danger
+              p= message
         form(action="/login", method="POST")
           .form-group
             label Email
