Added MongoUserProvider to perform authentication, also added api test and some changes in views.

--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  nav.navbar.navbar-inverse.navbar-fixed-top
+  nav.navbar.navbar-default.navbar-fixed-top.navbar-shadow
     .container
       .navbar-header
         button.navbar-toggle(type='button', data-toggle='collapse', data-target='.collapse.navbar-collapse')
