--- a/public/views/partials/details.jade
+++ b/public/views/partials/details.jade
@@ -4,5 +4,5 @@
 .my-panel
   survey-details(survey='survey')
 
-.my-panel(ng-repeat='question in survey.questions')
+div(ng-repeat='question in survey.questions')
   question-details(question='question')
