--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,27 +1,32 @@
 body {
   padding: 70px 50px 50px 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  //background-image: url('../images/background.jpg');
-  background-color: #f5f5f5;
+  background-image: url('../images/background.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
+  //background-color: #f8f8f8;
 }
 
-//a {
-//  color: #00B7FF;
-//}
+.navbar-shadow {
+  box-shadow: 0px 1px 2px #d6d6d6;
+}
 
-.navbar-green {
-  background-color: #0A4000;
-  a {
-    color: #1400dc
-  }
+.my-panel-active {
+    box-shadow: 1px 1px 10px #d6d6d6 !important;
 }
 
 .my-panel {
   padding: 30px;
   background-color: #fff;
   border-radius: 2px;
-  box-shadow: 1px 1px 10px #888888;
+  border: solid 1px;
+  border-color: #e7e7e7;
   margin-top: 20px;
+  box-shadow: 1px 1px 4px #E0E0E0;
+
+  
 
   .my-panel-header {
     h3 {
