--- a/public/views/partials/directiveTemplates/surveyList.jade
+++ b/public/views/partials/directiveTemplates/surveyList.jade
@@ -4,5 +4,5 @@
 ul.list-group
   a.list-group-item(ng-repeat='survey in surveys | filter:filter', href='#/{{ survey._id }}')
     span.glyphicon.glyphicon-ok.pull-left(data-toggle='tooltip', title='dasdasd')
-    |  {{ survey.title }}
-    span.badge {{ survey.questionCount }}
+    |  {{ survey.metadata.title }}
+    span.badge {{ survey.metadata.answerCount }}
