--- a/public/views/partials/directiveTemplates/surveyDetails.jade
+++ b/public/views/partials/directiveTemplates/surveyDetails.jade
@@ -1,4 +1,5 @@
 //
    Created by Marcin on 2014-09-04.
 
-h4 {{ survey.title }}
+h4 {{ survey.metadata.title }}
+h5 {{ survey.metadata.description }}
