--- a/public/views/layout.jade
+++ b/public/views/layout.jade
@@ -9,7 +9,8 @@ html(ng-app='surveyApp')
     block content
 
     block scripts
+      script(src='lib/lodash.min.js')
       script(src='lib/jquery-1.11.1.min.js')
       script(src='lib/bootstrap/js/bootstrap.min.js')
-      script(src='lib/angular.min.js')
-      script(src='lib/angular-route.min.js')
+      script(src='lib/angular/angular.min.js')
+      script(src='lib/angular/angular-ui-router.min.js')
