--- a/public/views/partials/dashboard.jade
+++ b/public/views/partials/dashboard.jade
@@ -16,34 +16,18 @@
               input.form-control(type='text', ng-model='filter.metadata.title', placeholder='Search...')
 
         survey-list
-        button.btn.btn-default(type='button', data-toggle='modal', data-target='#newSurveyModal')
+        a.btn.btn-default(type='button', ui-sref="newSurvey")
           span.glyphicon.glyphicon-plus
           |  Create survey...
 
-        .modal.fade(id='newSurveyModal', tabindex='-1', role='dialog', aria-hidden='true')
-          .modal-dialog
-            .modal-content
-              .modal-header
-                button.close(type='button', data-dismiss='modal')
-                  span(aria-hidden='true') &times;
-                  span.sr-only Close
-                h4.modal-title Create new survey
-              form(ng-submit='createSurvey()')
-                .modal-body
-                  .form-group
-                    label Title
-                    input.form-control(type='text', ng-model='newSurvey.title', placeholder='Enter title...')
 
-                    label Description
-                    textarea.form-control(ng-model='newSurvey.description', placeholder='Enter description...')
-
-                .modal-footer
-                  button.btn.btn-default(type='button', data-dismiss='modal') Cancel
-                  button.btn.btn-primary(type='submit') Create
     .col-sm-3
       .my-panel
-        ul.list-group
-          li.list-group-item {{ selectedSurvey.metadata.title }}
-          li.list-group-item {{ selectedSurvey.metadata.status }}
-          li.list-group-item {{ selectedSurvey.metadata.answerCount }}
-          li.list-group-item {{ selectedSurvey.metadata.description }}
+        h3 Title
+        p {{ hoveredSurvey.metadata.title || selectedSurvey.metadata.title || ""}}
+        h3 Description
+        p {{ hoveredSurvey.metadata.description || selectedSurvey.metadata.description || "" }}
+        h3 Status
+        p {{ hoveredSurvey.metadata.status || selectedSurvey.metadata.status || ""}}
+        h3 Answer count
+        p {{ hoveredSurvey.metadata.answerCount || selectedSurvey.metadata.answerCount || "" }}
