--- a/public/views/profile.jade
+++ b/public/views/profile.jade
@@ -21,7 +21,6 @@ block content
           li
             a(ui-sref='dashboard') My surveys
 
-
   div(ui-view, ng-init='user= #{JSON.stringify(user)}')
 
 
@@ -31,6 +30,7 @@ block append scripts
   script(src='javascripts/surveys/main.js')
   script(src='javascripts/surveys/services/Surveys.js')
   script(src='javascripts/surveys/controllers/DashboardController.js')
+  script(src='javascripts/surveys/controllers/NewSurveyController.js')
   script(src='javascripts/surveys/controllers/SurveyDetailsController.js')
   script(src='javascripts/surveys/directives/surveyRow.js')
   script(src='javascripts/surveys/directives/surveyList.js')
