--- a/public/views/layout.jade
+++ b/public/views/layout.jade
@@ -14,3 +14,4 @@ html(ng-app='surveyApp')
       script(src='lib/bootstrap/js/bootstrap.min.js')
       script(src='lib/angular/angular.min.js')
       script(src='lib/angular/angular-ui-router.min.js')
+      script(src='lib/angular/angular-sanitize.min.js')
