added config files

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,7 +1,7 @@
 body {
   padding: 70px 50px 50px 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: #dedede;
+  background-color: #fff;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -26,10 +26,8 @@ html {
   padding: 30px;
   background-color: #fff;
   border-radius: 2px;
-  border: solid 1px;
-  border-color: #e7e7e7;
+  border: 1px solid #555555;
   margin-top: 20px;
-  box-shadow: 1px 1px 4px #696969;
 
   
 
@@ -56,12 +54,10 @@ html {
     @media (max-width: 768px) {
       display: none;
     }
-
-    margin-left: -65px;
-    margin-top: -20px;
     position: fixed;
     width: inherit;
-    height: 100vh;
+    height: 70vh;
+    margin-left: -60px;
   }
 
 
@@ -76,8 +72,6 @@ html {
     position: relative;
     display: block;
     padding: 10px 15px;
-    margin-left: -31px;
-    margin-right: -31px;
   }
   a.menu-item {
     color: #555;
