--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-  nav.navbar.navbar-default.navbar-fixed-top.navbar-shadow
-    .container
+  nav.navbar.navbar-default.navbar-fixed-top
+    .container-fluid
       .navbar-header
         button.navbar-toggle(type='button', data-toggle='collapse', data-target='.collapse.navbar-collapse')
           span.sr-only Toggle navigation
