--- a/public/views/profile.jade
+++ b/public/views/profile.jade
@@ -4,7 +4,7 @@
 extends layout
 
 block content
-  nav.navbar.navbar-default.navbar-fixed-top.navbar-shadow
+  nav.navbar.navbar-default.navbar-fixed-top
     .container-fluid
       .navbar-header
         button.navbar-toggle(type='button', data-toggle='collapse', data-target='.collapse.navbar-collapse')
@@ -14,12 +14,13 @@ block content
           span.icon-bar
         a.navbar-brand(ui-sref='dashboard') Surveys
       .collapse.navbar-collapse
+        ul.nav.navbar-nav
+          li
+            a(ui-sref='dashboard', ui-sref-active='active') My surveys
         ul.nav.navbar-nav.navbar-right
           li
             a(href='/logout') Logout
-        ul.nav.navbar-nav
-          li
-            a(ui-sref='dashboard') My surveys
+
 
   div(ui-view, ng-init='user= #{JSON.stringify(user)}')
 
