Editing survey's title and description.

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -90,3 +90,11 @@ html {
 .selectable-row {
   cursor: pointer;
 }
+
+.editable-click, a.editable-click {
+  color: #000;
+}
+
+.line-breakable {
+  white-space: pre-line;
+}
