--- a/public/views/layout.jade
+++ b/public/views/layout.jade
@@ -4,6 +4,7 @@ html(ng-app='surveyApp')
     title= title
     block styles
       link(rel='stylesheet', href='lib/bootstrap/css/bootstrap.min.css')
+      link(rel='stylesheet', href='lib/angular/xeditable/css/xeditable.css')
       link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
@@ -15,3 +16,4 @@ html(ng-app='surveyApp')
       script(src='lib/angular/angular.min.js')
       script(src='lib/angular/angular-ui-router.min.js')
       script(src='lib/angular/angular-sanitize.min.js')
+      script(src='lib/angular/xeditable/js/xeditable.min.js')
