--- a/public/views/partials/details.jade
+++ b/public/views/partials/details.jade
@@ -18,4 +18,4 @@
           h4 Survey details
 
         .panel-body
-          survey-details(survey='survey')
+          survey-details(survey='survey', update-survey="updateSurvey()")
