--- a/public/views/profile.jade
+++ b/public/views/profile.jade
@@ -34,4 +34,5 @@ block append scripts
   script(src='javascripts/surveys/controllers/NewSurveyController.js')
   script(src='javascripts/surveys/controllers/SurveyDetailsController.js')
   script(src='javascripts/surveys/directives/surveyList.js')
+  script(src='javascripts/surveys/directives/surveyDetails.js')
   script(src='javascripts/app.js')
