--- a/public/views/profile.jade
+++ b/public/views/profile.jade
@@ -22,7 +22,7 @@ block content
             a(href='/logout') Logout
 
 
-  div(ui-view, ng-init='user= #{JSON.stringify(user)}')
+  div(ui-view="", ng-init='user= #{JSON.stringify(user)}')
 
 
 block append scripts
