Editing questions - editing order

--- a/public/views/layout.jade
+++ b/public/views/layout.jade
@@ -4,6 +4,7 @@ html(ng-app='surveyApp')
     title= title
     block styles
       link(rel='stylesheet', href='lib/bootstrap/css/bootstrap.min.css')
+      link(rel='stylesheet', href='lib/jquery-ui.min.css')
       link(rel='stylesheet', href='lib/angular/xeditable/css/xeditable.css')
       link(rel='stylesheet', href='/stylesheets/style.css')
   body
@@ -12,8 +13,10 @@ html(ng-app='surveyApp')
     block scripts
       script(src='lib/lodash.min.js')
       script(src='lib/jquery-1.11.1.min.js')
+      script(src='lib/jquery-ui.min.js')
       script(src='lib/bootstrap/js/bootstrap.min.js')
       script(src='lib/angular/angular.min.js')
       script(src='lib/angular/angular-ui-router.min.js')
       script(src='lib/angular/angular-sanitize.min.js')
       script(src='lib/angular/xeditable/js/xeditable.min.js')
+      script(src='lib/angular/sortable.js')
