--- a/public/views/partials/surveyView.jade
+++ b/public/views/partials/surveyView.jade
@@ -9,7 +9,7 @@
         ul.list-group
           a.list-group-item() Basic info
           a.list-group-item(ui-sref=".edit", ui-sref-active="active") Edit description
-          a.list-group-item() Edit questions
+          a.list-group-item(ui-sref=".editQuestions", ui-sref-active="active") Edit questions
           a.list-group-item() Sharing
           a.list-group-item() Analysis
 
