Fix bug with VersionError

--- a/public/views/partials/editQuestions.jade
+++ b/public/views/partials/editQuestions.jade
@@ -2,10 +2,9 @@ h3 Questions
 
 ul.list-group(ui-sortable="sortableOptions", ng-model="survey.questions")
   li.list-group-item.selectable-row(ng-repeat="question in survey.questions", ng-click="selectQuestion($index)")
-    a(href="#", editable-text="question.body")
+    a(href="#", editable-text="question.body", onbeforesave="updateSurvey()")
       h4 {{ question.body }}
     div(ng-hide="selectedQuestion !== $index")
       p dupadupa
 
 button.btn.btn-default(ng-click="addQuestion()") Add new question
-button.btn.btn-default(ng-click="updateSurvey()") Save
