Show pencil when editing question, and removed fixed sidebar

--- a/public/views/partials/dashboard.jade
+++ b/public/views/partials/dashboard.jade
@@ -4,7 +4,7 @@
 .container-fluid
   .row
     .col-sm-2
-      .panel.panel-default.sidebar
+      .panel.panel-default
         .panel-heading
           h4 Actions
         ul.list-group
